Fix feat collection mobile

--- a/assets/base.css
+++ b/assets/base.css
@@ -1067,6 +1067,10 @@ summary::-webkit-details-marker {
     width: calc(50% - var(--grid-mobile-horizontal-spacing) / 2);
   }
 
+  .slider--tablet.grid--peek.grid--1-col-tablet-down .grid__item {
+    width: 100%;
+  }
+
   .slider--tablet.grid--peek.grid--2-col-tablet-down .grid__item {
     width: calc(50% - var(--grid-mobile-horizontal-spacing) - 3rem);
   }
